--- a/design.css
+++ b/design.css
@@ -22,6 +22,7 @@
     width: 100%;
     margin: auto;
     max-width: 1200px;
+    flex: auto;
     
   }
   
@@ -30,6 +31,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
+    background-color: #ffffff;
   }  
    .logo {
     
@@ -42,6 +44,8 @@
     font-size: 24px;
     font-family:'' ;
     font-weight: bold;  
+    flex: auto;
+    height: 200;
 
 }
   .navbar a {
@@ -102,6 +106,7 @@
   
   .image-section {
     max-width: 40%;
+    
   }
   
   .image-section img {
@@ -133,9 +138,10 @@
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
     overflow: hidden;
     /* height: 100%; */
-    max-height: 600px;
+    max-height: 700px;
 
 }
+
 .left-panel {
     background-color:  #ffffff;
     display: flex;
@@ -146,6 +152,8 @@
     /* width: 250px; */
     /* flex-direction: column; */
     animation: float 4s ease-in-out infinite;
+    
+    
 }
 
 .illustration img {
